app/assets/stylesheets/config/_fonts.scss
// Import Google fonts
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
@import url("https://use.typekit.net/ayo5ezt.css");

// Define fonts for body and headers
$body-font: "pragmatica", "Helvetica", "sans-serif";
$headers-font: "pragmatica", "Helvetica", "sans-serif";

// To use a font file (.woff) uncomment following lines
// @font-face {
//   font-family: "Font Name";
//   src: font-url('FontFile.eot');
//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
//        font-url('FontFile.woff') format('woff'),
//        font-url('FontFile.ttf') format('truetype')
// }
// $my-font: "Font Name";

body h3 {
  font-size: 18px;
}

body h2 {
  font-size: 20px;
  font-weight: 300;
}

body p, a {
  font-weight: 300;
  font-size: 16px;
}

body h1 {
  font-weight: 300;
  font-size: 148px;
}



body {
  @media only screen and (max-width: 770px){
    .start-image-container a {
      font-size: 60px;
      text-decoration: underline;
      text-shadow: none;
      color: #a58769;
    }

    .pictures {
      display: none;
    }

    .index-column.date {
      width: 10%;
    }

    .index-column.title-tag {
      width: 35%;
    }

    .tag {
      text-align: right;
    }

    .empty-header {
      display: none;
    }

    .start-image-container a:hover {
      font-size: 60px;
    }


    .start-image-container {
      padding-top: 40px;
      padding-bottom: 40px;
      height: 100vh;
    }

    p, a {
      font-size: 14px;
    }

    h2 {
      font-size: 18px;
    }

    .footer-golden {
      padding: 9px;
      a, p {
        font-size: 12px;
      }
    }

    .navbar {
      padding-left: 9px;
    }

    .navbar-collapse ul {
      padding: 12px;
    }

    .navbar-toggler.btn-outline-primary {
      color: #a58769;
      border: 1px solid #a58769 !important;
      &:hover {
        color: white !important;
        transition: 0.8s;
      }
    }

    .padding-top {
      padding-top: 8px;
      padding-bottom: 8px;
    }

    #nav-text {
      text-align: center;
    }

    .btn-outline-primary {
      font-size: 12px !important;
    }

    .project-introduction {
       min-height: 40vh;
    }

    .project-description {
      min-height: 40vh;
    }

    .index-column.text {
      padding: 6px;
    }

    .index-container {
      min-height: 100vh;
    }

    .tag {
      padding-bottom: 50px;
    }
  }
}

